--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
         working-directory: ./typescript
 
       - name: Build package
-        run: npm build
+        run: npm run build
         working-directory: ./typescript
 
       - name: Publish package
@@ -58,6 +58,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
+      - name: Install build
+        run: pip install build
 
       - name: Build package
         run: python -m build
@@ -83,7 +86,7 @@ jobs:
       - run: wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
         name: Install YQ
 
-      - run: apt install -y jq
+      - run: sudo apt install -y jq
         name: Install JQ
 
       - run: curl ${{ vars.OPENAPI_SCHEMA_HTTP }} -o oas-upstream.yml
