:wrench: set publish_tag step depend on publish_java

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -101,6 +101,7 @@ jobs:
     needs:
       - publish_typescript
       - publish_python
+      - publish_java
 
     steps:
       - name: Checkout
