--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,17 +18,19 @@ jobs:
       url: "https://central.sonatype.com/artifact/com.tripartie/tpdk"
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Set up Maven Repository
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        working-directory: java
+        working-directory: ./java
         run: mvn -B package --no-transfer-progress --file pom.xml
       - name: Publish package
         run: mvn --batch-mode deploy
-        working-directory: java
+        working-directory: ./java
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
