--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
         working-directory: ./java
         run: mvn -B package --no-transfer-progress --file pom.xml
       - name: Publish package
-        run: mvn --batch-mode deploy -DaltDeploymentRepository="ossrh::default::https://s01.oss.sonatype.org/content/repositories/snapshots/" -Drelease=true
+        run: mvn --batch-mode deploy -DaltDeploymentRepository="ossrh::default::https://oss.sonatype.org/service/local/staging/deploy/maven2/" -Drelease=true
         working-directory: ./java
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
