--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ permissions:
   contents: write
   deployments: write
   id-token: write
+  packages: write
 
 on:
   workflow_dispatch:
@@ -15,7 +16,6 @@ jobs:
 
     environment:
       name: maven
-      url: "https://central.sonatype.com/artifact/com.tripartie/tpdk"
 
     steps:
       - name: Checkout
@@ -25,18 +25,12 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-      - name: Build with Maven
-        working-directory: ./java
-        run: mvn -B package --no-transfer-progress --file pom.xml
       - name: Publish package
-        run: mvn --batch-mode deploy -DaltDeploymentRepository="ossrh::default::https://oss.sonatype.org/service/local/staging/deploy/maven2/" -Drelease=true
+        run: mvn --batch-mode deploy
         working-directory: ./java
         env:
-          MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
   publish_typescript:
 
