--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,6 @@ permissions:
   contents: write
   deployments: write
   id-token: write
-  packages: write
 
 on:
   workflow_dispatch:
@@ -26,7 +25,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode deploy -DaltDeploymentRepository="github::default::https://maven.pkg.github.com/tripartie/tpdk" -Drelease=true
         working-directory: ./java
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
